<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/bg_main"

    android:gravity="center"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="8"
       android:orientation="vertical"
       android:layout_marginTop="120dp">

       <Button
           android:id="@+id/btn1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAllCaps="false"
           android:text="@string/option1"
           android:textSize="20sp"
           android:background="@drawable/shape"/>

       <Button
           android:id="@+id/btn2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAllCaps="false"
           android:text="@string/option2"
           android:textSize="20sp"
           android:background="@drawable/shape"
           android:layout_marginTop="15dp"/>

       <Button
           android:id="@+id/btn3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAllCaps="false"
           android:text="@string/option3"
           android:textSize="20sp"
           android:background="@drawable/shape"
           android:layout_marginTop="15dp"/>

       <Button
           android:id="@+id/btn4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAllCaps="false"
           android:text="@string/option4"
           android:textSize="20sp"
           android:background="@drawable/shape"
           android:layout_marginTop="15dp"/>

   </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
           android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/login"
            android:textColor="@color/skybule"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/sign"
            android:textColor="@color/skybule"
            android:textSize="20sp"/>

    </RelativeLayout>


</LinearLayout>